@@ -14,21 +14,18 @@
 
   <dependencies>
 
-    <!-- Mongo -->
     <dependency>
       <groupId>org.mongodb</groupId>
       <artifactId>mongodb-driver-sync</artifactId>
       <version>5.5.0</version>
     </dependency>
 
-    <!-- Logger -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
       <version>2.0.16</version>
     </dependency>
 
-    <!-- JavaFX -->
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
@@ -37,35 +34,14 @@
 
     <dependency>
       <groupId>org.openjfx</groupId>
-      <artifactId>javafx-graphics</artifactId>
+      <artifactId>javafx-fxml</artifactId>
       <version>${javafx.version}</version>
     </dependency>
-
-    <dependency>
-      <groupId>org.openjfx</groupId>
-      <artifactId>javafx-base</artifactId>
-      <version>${javafx.version}</version>
-    </dependency>
-
-	<!-- https://mvnrepository.com/artifact/com.gluonhq.scenebuilder/parent -->
-	<dependency>
-	    <groupId>com.gluonhq.scenebuilder</groupId>
-	    <artifactId>parent</artifactId>
-	    <version>25.0.0</version>
-	    <type>pom</type>
-	</dependency>
-
-	<!-- https://mvnrepository.com/artifact/com.gluonhq.scenebuilder/kit -->
-	<dependency>
-	    <groupId>com.gluonhq.scenebuilder</groupId>
-	    <artifactId>kit</artifactId>
-	    <version>25.0.0</version>
-	</dependency>
-
   </dependencies>
 
   <build>
     <sourceDirectory>src</sourceDirectory>
+
     <plugins>
 
       <plugin>
@@ -73,7 +49,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.13.0</version>
         <configuration>
-          <release>21</release>
+          <release>${maven.compiler.release}</release>
         </configuration>
       </plugin>
 
@@ -83,9 +59,6 @@
         <version>0.0.8</version>
         <configuration>
           <mainClass>Grafica.Main</mainClass>
-          <jvmArgs>
-        	<jvmArg>--enable-native-access=javafx.graphics</jvmArg>
-     	  </jvmArgs>
         </configuration>
       </plugin>
 
